--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -1,2 +1,5 @@
 steps:
-- script: echo hello world 
+- task: MSBuild@1
+  displayName: Build the database project
+  inputs:
+    solution: samples/blob/master/samples/databases/wide-world-importers/wwi-ssdt/wwi-ssdt/WideWorldImporters.sqlproj
